--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=sql-intro
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/Libs
 spring.datasource.username=postgres
-spring.datasource.password=hello
+spring.datasource.password=Nz5zxzN5
